1999-02-09  Alex Lancaster  <alex@santafe.edu>

	* refcont.sgml (random-app.sgml): Add `Random' Appendix to list of
	contents.

1999-01-26  Alex Lancaster  <alex@santafe.edu>

	* refmeta.sgml: Move bibliodata entity outside of BOOKBIBLIO - so
	legalnotice links work.

1999-01-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ref00a.sgml: Remove porting note about .swarmArchiver.  Swarm 1.4
	will read old files, but then change the syntax.

1999-01-15  Alex Lancaster  <alex@santafe.edu>

	* ref00a.sgml: Add porting note on Histogram protocol change.

1999-01-13  Alex Lancaster  <alex@santafe.edu>

	* refmeta.sgml: Remove old LEGALNOTICE text.  Refer the
	newly-defined {doc,swarm}-legalnotice entities from global.ent.
	Move CORPAUTHOR inside BOOKBIBLIO.

	* gpl-app.sgml: Refer to the Swarm documentation as being under
	the terms of the GPL.

	* ref00a.sgml (SECT1): Add porting notes for Swarm 1.4.

1999-01-07  Alex Lancaster  <alex@santafe.edu>

	* ref00a.sgml: Make SIMPLELIST an ITEMIZEDLIST.

	* gpl-app.sgml: Remove SIDEBAR from wrapping the licence text,
	SIDEBAR can't run over a page in the printed backend.  Make
	introductory description a SIDEBAR.

	* lgpl-app.sgml: Likewise.

	* ref00.sgml: Replace SECT1 with two SIMPLESECTs.  Tidying and
	reformatting.
	(Acknowledgements): Updated.

1998-12-22  Alex Lancaster  <alex@santafe.edu>

	* probes-app.sgml ({customized,complete}-probe-map): Add IDs to
	FIGUREs

1998-10-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* refbook.tex.in: Use top_dossrcdir instead of top_srcdir.

1998-10-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* refbook.tex.in: Include tex/macros.tex.

1998-08-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ref00a.sgml: Add 1.2 -> 1.3 porting notes.

1998-07-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ref00a.sgml: Put items related to HeatbugObserverSwarm.h in
	their own list.

1998-07-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
